--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,6 +1,7 @@
 #DB
 db.driverClassName=org.sqlite.JDBC
-db.url=jdbc:sqlite::resource:test.db?useUnicode=true&amp;characterEncoding=utf-8
+db.url=jdbc:sqlite:C:\\Personal_Disk\\test.db
+#db.url=jdbc:sqlite::resource:test.db?useUnicode=true&characterEncoding=utf-8
 db.username=
 db.password=
 db.initialSize=2
